# SimpleChess_SDL

./: .gitignore  CMakeLists.txt  Makefile  README.md  board.c  board.h  game.c  game.h  main.c  pieces.c  pieces.h  res.c  res.h  ui.c  ui.h
cmake/: CMakeLists.txt  FindSDL2.cmake
cmake_modules/: FindSDL2.cmake
src/: board.c  board.h  common.c  common.h  game.c  game.h  input.c  input.h  main.c  pieces.c  pieces.h  res.c  res.h  ui.c  ui.h
